syntax = "proto3";

package host;

// DB -----------
import "google/protobuf/timestamp.proto";
import "options/gorm.proto";

// Common
import "host/os.proto";
import "host/process.proto";
import "host/port.proto";
import "host/user.proto";
import "host/filesystem.proto";
import "network/network.proto";
import "network/packet.proto";

// Scanners
import "scan/nmap/nmap.proto";

// Host - Represents a remote computer host in DB
message Host {
  option (gorm.opts).ormable = true;
  // @gotags: display:"ID" readonly:"true" strict:"yes"
  // int64 Id = 1 [(gorm.field).tag = {primary_key: true}];
  // string Id = 1 [(gorm.field).tag = {type:"uuid" primary_key: true }];
  string Id = 1 [(gorm.field).tag = {type:"uuid" primary_key: true }];
  // @gotags: display:"Created at" readonly:"true" xml:"-" 
  google.protobuf.Timestamp CreatedAt = 4;
  // @gotags: display:"Updated at" readonly:"true" xml:"-" 
  google.protobuf.Timestamp UpdatedAt = 5;

  // General ------------------------------------
  // @gotags: display:"MAC Address" 
  string MAC = 10;
  // @gotags: display:"Comm" 
  string Comm = 11;
  // @gotags: display:"OS Name" 
  string OSName = 12;
  // @gotags: display:"OS Flavor" 
  string OSFlavor = 13;
  // @gotags: display:"OS Service Pack" 
  string OSSp = 14;
  // @gotags: display:"OS Language" 
  string OSLang = 15;
  // @gotags: display:"OS Family" 
  string OSFamily = 16;
  // @gotags: display:"CPU Arch" 
  string Arch = 17;
  // @gotags: display:"Purpose" 
  string Purpose = 18;
  // @gotags: display:"Info" 
  string Info = 19;
  // @gotags: display:"Scope" 
  string Scope = 20;
  // @gotags: display:"Virtual Host" 
  string VirtualHost = 21;

  // @gotags: display:"Users" 
  repeated User Users = 22;
  // @gotags: display:"Processes" 
  repeated Process Processes = 23;
  // @gotags: display:"Filesystem" 
  FileSystem FS = 24 [(gorm.field).belongs_to = {}];;

  // @gotags: xml:"address" 
  repeated network.Address Addresses = 25 [(gorm.field).many_to_many = {}];

  // Nmap ---------------------------------------
  // @gotags: xml:"os"
  OS OS = 30 [(gorm.field).belongs_to = {}];
  // @gotags: xml:"status"
  Status Status = 31;
  // @gotags: xml:"distance"
  network.Distance Distance = 32 [(gorm.field).belongs_to = {}];
  // @gotags: xml:"starttime,attr,omitempty"
  int64 StartTime = 33;
  // @gotags: xml:"endtime,attr,omitempty"
  int64 EndTime = 34;         // Might have issues here with XML unmarshalling
  // @gotags: xml:"ipidsequence"
  network.IPIDSequence IPIDSequence = 35[(gorm.field).belongs_to = {}];
  // @gotags: xml:"tcpsequence"
  network.TCPSequence TCPSequence = 36[(gorm.field).belongs_to = {}];
  // @gotags: xml:"tcptssequence"
  network.TCPTSSequence TCPTSSequence = 37 [(gorm.field).belongs_to = {}];
  network.ICMPResponse ICMPResponse = 38 [(gorm.field).belongs_to = {}];
  // @gotags: xml:"times"
  network.Times Testing = 39 [(gorm.field).belongs_to = {}];
  // @gotags: xml:"trace"
  network.Trace Trace = 40 [(gorm.field).belongs_to = {}];
  // @gotags: xml:"uptime"
  Uptime Uptime = 41 [(gorm.field).belongs_to = {}];
  // @gotags: xml:"comment,attr"
  string Comment = 42;
  // @gotags: xml:"hostscript>script"
  repeated scan.nmap.Script HostScripts = 43 [(gorm.field).many_to_many = {}];
  // @gotags: xml:"smurf"
  repeated scan.nmap.Smurf Smurfs = 44 [(gorm.field).many_to_many = {}];
  // @gotags: xml:"hostnames>hostname"
  repeated Hostname Hostnames = 45;
  // @gotags: xml:"ports>port"
  repeated Port Ports = 46 [(gorm.field).belongs_to = {}];
  // @gotags: xml:"ports>extraports"
  repeated ExtraPort ExtraPorts = 47 [(gorm.field).belongs_to = {}];
}

// A hostname for a host.
message Hostname {
  option (gorm.opts).ormable = true;
  // @gotags: display:"ID" readonly:"true" strict:"yes"
  string Id = 1 [(gorm.field).tag = {type:"uuid" primary_key: true }];
  // @gotags: display:"Created at" readonly:"true" xml:"-"
  google.protobuf.Timestamp CreatedAt = 4;
  // @gotags: display:"Updated at" readonly:"true" xml:"-"
  google.protobuf.Timestamp UpdatedAt = 5;

  // @gotags: display:"Name" xml:"name,attr"
  string Name = 10;
  // @gotags: display:"Type" xml:"type,attr"
  string Type = 11;
}

// Uptime - The amount of time the host has been up
message Uptime {
  option (gorm.opts).ormable = true;
  string Id = 100 [(gorm.field).tag = {type:"uuid" primary_key: true }];

  // @gotags: xml:"seconds,attr"
  int32 Seconds = 1;
  // @gotags: xml:"lastboot,attr"
  string LastBoot = 2;
}

// Status represents a host's status.
message Status {
  option (gorm.opts).ormable = true;
  string Id = 1 [(gorm.field).tag = {type:"uuid" primary_key: true }];

  // @gotags: xml:"state,attr"
  string State = 2;
  // @gotags: xml:"reason,attr"
  string Reason = 3;
  // @gotags: xml:"reason_ttl,attr"
  string ReasonTTL = 4;
}
